cmake_minimum_required(VERSION 3.15)
cmake_policy(SET CMP0091 NEW)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
include(CustomCompilerOptions)
fix_compile_flags()
fix_release_flags()
add_static_runtime_option(ON)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "CMake")

project(ERTools)

set(CMAKE_C_VISIBILITY_PRESET hidden)
set(CMAKE_CXX_VISIBILITY_PRESET hidden)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)

option(BUILD_BINGOTOOL "Build Bingotool" OFF)
option(BUILD_LIVESTREAMINGTOOL "Build Livestreamingtool" OFF)
option(BUILD_SAVEIMPORTER "Build Saveimporter" OFF)
option(BUILD_FLAGCHECKER "Build Flagchecker" OFF)
option(BUILD_IMEPATCHER "Build Imepatcher" OFF)
option(BUILD_LSS_HELPER "Build LSS Helper" OFF)

add_subdirectory(deps)
if (BUILD_BINGOTOOL)
    add_subdirectory(bingotool)
endif ()
if (BUILD_LIVESTREAMINGTOOL)
    add_subdirectory(livestreamingtool)
endif ()
if (BUILD_SAVEIMPORTER)
    add_subdirectory(saveimporter)
endif ()
if (BUILD_FLAGCHECKER)
    add_subdirectory(flagchecker)
endif ()
if (BUILD_IMEPATCHER)
    add_subdirectory(imepatcher)
endif ()
if (BUILD_LSS_HELPER)
    add_subdirectory(lsshelper)
endif ()